--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+        		<h1>Hi there, I'm Trent Hazy</h1>
+				<pI&#39;m a native Californian obsessed with design, technology, and cars.</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="mailto:trent@trenthazy.com">email</a></li>
+        		<li><a href="https://github.com/trenthazy">github.com/trenthazy</a></li>
 			</ul>
 		</footer>
 	</body>
