--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 	<head>
 		<title>Trent Hazy</title>
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="icon" type="image/png" href="http://i.imgur.com/tgNuz.png">
 	</head>
 	<body>
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
         		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
@@ -22,6 +22,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:trent@trenthazy.com">email</a></li>
+			<li>a href="www.linkedin.com/in/trenthazy>linkedin</a></li>
         		<li><a href="https://github.com/trenthazy">github.com/trenthazy</a></li>
 			</ul>
 		</footer>
