--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:trent@trenthazy.com">email</a></li>
-			<li>a href="www.linkedin.com/in/trenthazy>linkedin</a></li>
+			<li>a href="http://www.linkedin.com/in/trenthazy>linkedin</a></li>
         		<li><a href="https://github.com/trenthazy">github.com/trenthazy</a></li>
 			</ul>
 		</footer>
