--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Trent Hazy</title>
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 		<link rel="icon" type="image/png" href="http://i.imgur.com/tgNuz.png">
 	</head>
 	<body>
@@ -22,8 +23,8 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:trent@trenthazy.com">email</a></li>
-			<li>a href="http://www.linkedin.com/in/trenthazy>linkedin</a></li>
-        		<li><a href="https://github.com/trenthazy">github.com/trenthazy</a></li>
+			<li><a href="http://www.linkedin.com/in/trenthazy>linkedin</a></li>
+        		<li><a href="https://github.com/trenthazy">github</a></li>
 			</ul>
 		</footer>
 	</body>
