fixed tag closing

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Trent Hazy</h1>
-				<pI&#39;m a native Californian obsessed with design, technology, and cars.</p>
+				<p>I&#39;m a native Californian obsessed with design, technology, and cars.</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
