about page created

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:trent@trenthazy.com">email</a></li>
+        		<li><a href="mailto:t@trenthazy.com">email</a></li>
 			<li><a href="http://www.linkedin.com/in/trenthazy">linkedin</a></li>
         		<li><a href="https://github.com/trenthazy">github</a></li>
 			</ul>
