--- a/about.html
+++ b/about.html
@@ -9,9 +9,9 @@
   <body>
     <nav>
         <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/blog">Blog</a></li>
+            <li><a href="/"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+            <li><a href="/about"><i class="fa fa-user-circle-o" aria-hidden="true"></i> About</a></li>
+            <li><a href="/blog"><i class="fa fa-bullhorn" aria-hidden="true"></i> Blog</a></li>
         </ul>
     </nav>
     <div class="container">
