added font awesome CDN embed

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Trent Hazy</title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-		<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-		<link rel="icon" type="image/png" href="http://i.imgur.com/tgNuz.png">
-	</head>
+  <head>
+    <title>Trent Hazy</title>
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <script src="https://use.fontawesome.com/461d077d07.js"></script>
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="icon" type="image/png" href="http://i.imgur.com/tgNuz.png">
+  </head>
 	<body>
 		<nav>
     		<ul>
