--- a/about.html
+++ b/about.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Trent Hazy</title>
+    <title>Trent Hazy | About</title>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <script src="https://use.fontawesome.com/461d077d07.js"></script>
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="icon" type="image/png" href="http://i.imgur.com/tgNuz.png">
   </head>
