--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:t@trenthazy.com">email</a></li>
-			      <li><a href="http://www.linkedin.com/in/trenthazy">linkedin</a></li>
-        		<li><a href="https://github.com/trenthazy">github</a></li>
+            <li><a href="mailto:t@trenthazy.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> email</a></li>
+            <li><a href="http://www.linkedin.com/in/trenthazy"><i class="fa fa-linkedin" aria-hidden="true"></i> linkedin</a></li>
+            <li><a href="https://github.com/trenthazy"><i class="fa fa-github" aria-hidden="true"></i> github</a></li>
 			</ul>
 		</footer>
 	</body>
