--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <script src="https://use.fontawesome.com/461d077d07.js"></script>
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-    <link rel="icon" type="image/png" href="http://i.imgur.com/tgNuz.png">
+    <link rel="icon" type="image/png" href="https://i.imgur.com/yHMDL1d.png">
   </head>
   <body>
     <nav>
