--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="https://use.fontawesome.com/461d077d07.js"></script>
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="icon" type="image/png" href="https://i.imgur.com/yHMDL1d.png">
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' />
   </head>
 	<body>
 		<nav>
