head details on home

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Trent Hazy</title>
+    <title>Trent Hazy | Home</title>
+    <meta name="keywords" content="trent, hazy, trenthazy, trent hazy">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@trenthazy">
+    <meta name="description" content="Trent Hazy is an entrepreneur and designer. He founded MindSumo in 2011 and earned a B.S. and MBA from Stanford. ">
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <script src="https://use.fontawesome.com/461d077d07.js"></script>
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
