--- a/about.html
+++ b/about.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <title>Trent Hazy | About</title>
+    <meta name="keywords" content="trent, hazy, trenthazy, trent hazy">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@trenthazy">
+    <meta name="description" content="Learn about Trent's background, experience, and interests.">
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <script src="https://use.fontawesome.com/461d077d07.js"></script>
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
