--- a/index.html
+++ b/index.html
@@ -13,27 +13,33 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' />
   </head>
 	<body>
-		<nav>
-    		<ul>
-            <li><a href="/"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
-            <li><a href="/about"><i class="fa fa-user-circle-o" aria-hidden="true"></i> About</a></li>
-            <li><a href="/blog"><i class="fa fa-bullhorn" aria-hidden="true"></i> Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        	<h1>Hi there, I'm Trent Hazy</h1>
-				  <p>I&#39;m a native Californian obsessed with design, technology, and cars.</p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-          <li><a href="mailto:t@trenthazy.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> email</a></li>
-          <li><a href="http://www.linkedin.com/in/trenthazy"><i class="fa fa-linkedin-square" aria-hidden="true"></i> linkedin</a></li>
-          <li><a href="https://angel.co/trenthazy"><i class="fa fa-angellist" aria-hidden="true"></i> angellist</a></li>
-          <li><a href="https://github.com/trenthazy"><i class="fa fa-github" aria-hidden="true"></i> github</a></li>
-			</ul>
-		</footer>
+    <frame>
+      <nav>
+          <ul>
+              <li><a href="/"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+              <li><a href="/about"><i class="fa fa-user-circle-o" aria-hidden="true"></i> About</a></li>
+              <li><a href="/blog"><i class="fa fa-bullhorn" aria-hidden="true"></i> Blog</a></li>
+          </ul>
+      </nav>
+    </frame>
+    <div class="hero">
+      <div class="frame">
+          <div class="blurb">
+            <h1>Hi there, I'm Trent Hazy</h1>
+            <p>I&#39;m a native Californian obsessed with design, technology, and cars.</p>
+          </div>
+      </div>
+    </div>
+    <frame>
+  		<footer>
+      		<ul>
+            <li><a href="mailto:t@trenthazy.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> email</a></li>
+            <li><a href="http://www.linkedin.com/in/trenthazy"><i class="fa fa-linkedin-square" aria-hidden="true"></i> linkedin</a></li>
+            <li><a href="https://angel.co/trenthazy"><i class="fa fa-angellist" aria-hidden="true"></i> angellist</a></li>
+            <li><a href="https://github.com/trenthazy"><i class="fa fa-github" aria-hidden="true"></i> github</a></li>
+  			</ul>
+  		</footer>
+    </frame>
 	</body>
 </html>
 
