--- a/index.html
+++ b/index.html
@@ -15,22 +15,24 @@
 	<body>
     <frame>
       <nav>
+        <div class="frame">
           <ul>
               <li><a href="/"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
               <li><a href="/about"><i class="fa fa-user-circle-o" aria-hidden="true"></i> About</a></li>
               <li><a href="/blog"><i class="fa fa-bullhorn" aria-hidden="true"></i> Blog</a></li>
           </ul>
+        </div>
       </nav>
     </frame>
     <div class="hero">
       <div class="frame">
           <div class="blurb">
             <h1>Hi there, I'm Trent Hazy</h1>
-            <p>I&#39;m a native Californian obsessed with design, technology, and cars.</p>
+            <p style="color: white;">I&#39;m a native Californian obsessed with design, technology, and cars.</p>
           </div>
       </div>
     </div>
-    <frame>
+    <div class="frame">
   		<footer>
       		<ul>
             <li><a href="mailto:t@trenthazy.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> email</a></li>
@@ -39,7 +41,7 @@
             <li><a href="https://github.com/trenthazy"><i class="fa fa-github" aria-hidden="true"></i> github</a></li>
   			</ul>
   		</footer>
-    </frame>
+    </div>
 	</body>
 </html>
 
