--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <div class="hero">
       <div class="frame">
           <div class="blurb">
+            <img src="https://media.licdn.com/dms/image/C4D03AQGDxH-Dm7re8g/profile-displayphoto-shrink_200_200/0?e=1529272800&v=beta&t=305C3s-TPWlhfNhNtfbRulu652DBctMk4m1L_5kREhA" style="float: left; border-radius: 50px; border: 1px solid grey; vertical-align: top;">
             <h1>Hi there, I'm Trent Hazy</h1>
             <p style="color: white;">I&#39;m a native Californian obsessed with design, technology, and cars.</p>
           </div>
