--- a/blog.html
+++ b/blog.html
@@ -9,26 +9,28 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' />
   </head>
   <body>
-    <nav>
-        <ul>
-            <li><a href="/"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
-            <li><a href="/about"><i class="fa fa-user-circle-o" aria-hidden="true"></i> About</a></li>
-            <li><a href="/blog"><i class="fa fa-bullhorn" aria-hidden="true"></i> Blog</a></li>
+    <div class="frame">
+      <nav>
+          <ul>
+              <li><a href="/"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+              <li><a href="/about"><i class="fa fa-user-circle-o" aria-hidden="true"></i> About</a></li>
+              <li><a href="/blog"><i class="fa fa-bullhorn" aria-hidden="true"></i> Blog</a></li>
+          </ul>
+      </nav>
+      <div class="container">
+          <div class="blurb">
+            <p>Coming soon...</p>
+          </div><!-- /.blurb -->
+      </div><!-- /.container -->
+      <footer>
+          <ul>
+            <li><a href="mailto:t@trenthazy.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> email</a></li>
+            <li><a href="http://www.linkedin.com/in/trenthazy"><i class="fa fa-linkedin-square" aria-hidden="true"></i> linkedin</a></li>
+            <li><a href="https://angel.co/trenthazy"><i class="fa fa-angellist" aria-hidden="true"></i> angellist</a></li>
+            <li><a href="https://github.com/trenthazy"><i class="fa fa-github" aria-hidden="true"></i> github</a></li>
         </ul>
-    </nav>
-    <div class="container">
-        <div class="blurb">
-          <p>Coming soon...</p>
-        </div><!-- /.blurb -->
-    </div><!-- /.container -->
-    <footer>
-        <ul>
-          <li><a href="mailto:t@trenthazy.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> email</a></li>
-          <li><a href="http://www.linkedin.com/in/trenthazy"><i class="fa fa-linkedin-square" aria-hidden="true"></i> linkedin</a></li>
-          <li><a href="https://angel.co/trenthazy"><i class="fa fa-angellist" aria-hidden="true"></i> angellist</a></li>
-          <li><a href="https://github.com/trenthazy"><i class="fa fa-github" aria-hidden="true"></i> github</a></li>
-      </ul>
-    </footer>
+      </footer>
+    </div>
   </body>
 </html>
 
