--- a/about.html
+++ b/about.html
@@ -13,35 +13,37 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' />
   </head>
   <body>
-    <nav>
-        <ul>
-            <li><a href="/"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
-            <li><a href="/about"><i class="fa fa-user-circle-o" aria-hidden="true"></i> About</a></li>
-            <li><a href="/blog"><i class="fa fa-bullhorn" aria-hidden="true"></i> Blog</a></li>
+    <div class="frame">
+      <nav>
+          <ul>
+              <li><a href="/"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+              <li><a href="/about"><i class="fa fa-user-circle-o" aria-hidden="true"></i> About</a></li>
+              <li><a href="/blog"><i class="fa fa-bullhorn" aria-hidden="true"></i> Blog</a></li>
+          </ul>
+      </nav>
+      <div class="container">
+          <div class="blurb">
+            <h1>About</h1>
+            <p>Grew up in LA, then migrated to Northern California in 2005 to attend Stanford. Got a degree in Product Design and now can&#39;t stop thinking about products...</p>
+            <p>Founded <a href="http://www.mindsumo.com" target="_blank">MindSumo</a> in 2011 to help companies solve problems by crowdsourcing new ideas from students and recent grads. Grew it to 300,000+ registered users and nearly 100 Fortune 500 clients.</p>
+            <p>My wife and I started a full-time MBA back at Stanford in 2017.</p>
+            <h1>Recent Tweet</h1>
+            <div id ="twitter" style="max-width: 360px;">
+              <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/trenthazy" data-widget-id="427151357422747648" data-tweet-limit="1" data-chrome="nofooter noheader transparent" data-border-color="none" >Tweets by @trenthazy</a>
+              <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+            </div>
+            <div id ="tweet_date"></div>
+          </div><!-- /.blurb -->
+      </div><!-- /.container -->
+      <footer>
+          <ul>
+            <li><a href="mailto:t@trenthazy.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> email</a></li>
+            <li><a href="http://www.linkedin.com/in/trenthazy"><i class="fa fa-linkedin-square" aria-hidden="true"></i> linkedin</a></li>
+            <li><a href="https://angel.co/trenthazy"><i class="fa fa-angellist" aria-hidden="true"></i> angellist</a></li>
+            <li><a href="https://github.com/trenthazy"><i class="fa fa-github" aria-hidden="true"></i> github</a></li>
         </ul>
-    </nav>
-    <div class="container">
-        <div class="blurb">
-          <h1>About</h1>
-          <p>Grew up in LA, then migrated to Northern California in 2005 to attend Stanford. Got a degree in Product Design and now can&#39;t stop thinking about products...</p>
-          <p>Founded <a href="http://www.mindsumo.com" target="_blank">MindSumo</a> in 2011 to help companies solve problems by crowdsourcing new ideas from students and recent grads. Grew it to 300,000+ registered users and nearly 100 Fortune 500 clients.</p>
-          <p>My wife and I started a full-time MBA back at Stanford in 2017.</p>
-          <h1>Recent Tweet</h1>
-          <div id ="twitter" style="max-width: 360px;">
-            <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/trenthazy" data-widget-id="427151357422747648" data-tweet-limit="1" data-chrome="nofooter noheader transparent" data-border-color="none" >Tweets by @trenthazy</a>
-            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-          </div>
-          <div id ="tweet_date"></div>
-        </div><!-- /.blurb -->
-    </div><!-- /.container -->
-    <footer>
-        <ul>
-          <li><a href="mailto:t@trenthazy.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> email</a></li>
-          <li><a href="http://www.linkedin.com/in/trenthazy"><i class="fa fa-linkedin-square" aria-hidden="true"></i> linkedin</a></li>
-          <li><a href="https://angel.co/trenthazy"><i class="fa fa-angellist" aria-hidden="true"></i> angellist</a></li>
-          <li><a href="https://github.com/trenthazy"><i class="fa fa-github" aria-hidden="true"></i> github</a></li>
-      </ul>
-    </footer>
+      </footer>
+    </div>
   </body>
 </html>
 
