--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="trent, hazy, trenthazy, trent hazy">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@trenthazy">
-    <meta name="description" content="Trent Hazy is an entrepreneur and designer in the Bay Area. He founded MindSumo in 2011 and earned a B.S. and MBA from Stanford.">
+    <meta name="description" content="Trent Hazy is a product leader and entrepreneur based in Seattle. He currently works at Microsoft and previously founded MindSumo and earned a B.S. and MBA from Stanford.">
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <script src="https://use.fontawesome.com/461d077d07.js"></script>
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
@@ -28,7 +28,7 @@
       <div class="frame">
           <div class="blurb">
             <h1 style="margin: 0">Hi there, I'm Trent Hazy</h1>
-            <p style="color: white; margin: 10px 0;">I&#39;m a native Californian obsessed with design, technology, and cars.</p>
+            <p style="color: white; margin: 10px 0;">I&#39;m an engineer/designer obsessed with productivity tools, my son, and cars.</p>
           </div>
       </div>
     </div>
