--- a/about.html
+++ b/about.html
@@ -25,8 +25,8 @@
           <div class="blurb">
             <h1>About</h1>
             <p>Grew up in LA, then migrated to Northern California in 2005 to attend Stanford. Got a degree in Product Design and now can&#39;t stop thinking about products...</p>
-            <p>Founded <a href="http://www.mindsumo.com" target="_blank">MindSumo</a> in 2011 to help companies solve problems by crowdsourcing new ideas from students and recent grads. Grew it to 300,000+ registered users and nearly 100 Fortune 500 clients.</p>
-            <p>My wife and I started a full-time MBA back at Stanford in 2017.</p>
+            <p>Founded <a href="http://www.mindsumo.com" target="_blank">MindSumo</a> in 2011 to help companies solve problems by crowdsourcing new ideas from students and recent grads. Grew it to 350,000+ users and 100 Fortune 500 clients.</p>
+            <p>My wife and I started a full-time MBA back at Stanford in 2017 before moving to Seattle, where I work on the Microsoft Teams product.</p>
             <h1>Recent Tweet</h1>
             <div id ="twitter" style="max-width: 360px;">
               <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/trenthazy" data-widget-id="427151357422747648" data-tweet-limit="1" data-chrome="nofooter noheader transparent" data-border-color="none" >Tweets by @trenthazy</a>
