--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   		<footer>
       		<ul>
             <li><a href="mailto:trent@trenthazy.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> email</a></li>
-            <li><a href="http://www.linkedin.com/in/trenthazy"><i class="fa fa-linkedin-square" aria-hidden="true"></i> linkedin</a></li>
+            <li><a href="https://www.linkedin.com/in/trenthazy"><i class="fa fa-linkedin-square" aria-hidden="true"></i> linkedin</a></li>
             <li><a href="https://angel.co/trenthazy"><i class="fa fa-angellist" aria-hidden="true"></i> angellist</a></li>
             <li><a href="https://github.com/trenthazy"><i class="fa fa-github" aria-hidden="true"></i> github</a></li>
   			</ul>
