--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
           <div class="blurb">
             <h1>About</h1>
             <p>Grew up in LA, then migrated to Northern California in 2005 to attend Stanford. Got a degree in Product Design and now can&#39;t stop thinking about products...</p>
-            <p>Founded <a href="http://www.mindsumo.com" target="_blank">MindSumo</a> in 2011 to help companies solve problems by crowdsourcing new ideas from students and recent grads. Grew it to 350,000+ users and 100 Fortune 500 clients.</p>
+            <p>Founded <a href="https://www.mindsumo.com" target="_blank">MindSumo</a> in 2011 to help companies solve problems by crowdsourcing new ideas from students and recent grads. Grew it to 350,000+ users and 100 Fortune 500 clients.</p>
             <p>My wife and I started a full-time MBA back at Stanford in 2017 before moving to Seattle, where I work on the Microsoft Teams product.</p>
             <h1>Recent Tweet</h1>
             <div id ="twitter" style="max-width: 360px;">
@@ -38,7 +38,7 @@
       <footer>
           <ul>
             <li><a href="mailto:trent@trenthazy.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> email</a></li>
-            <li><a href="http://www.linkedin.com/in/trenthazy"><i class="fa fa-linkedin-square" aria-hidden="true"></i> linkedin</a></li>
+            <li><a href="https://www.linkedin.com/in/trenthazy"><i class="fa fa-linkedin-square" aria-hidden="true"></i> linkedin</a></li>
             <li><a href="https://angel.co/trenthazy"><i class="fa fa-angellist" aria-hidden="true"></i> angellist</a></li>
             <li><a href="https://github.com/trenthazy"><i class="fa fa-github" aria-hidden="true"></i> github</a></li>
         </ul>
@@ -71,19 +71,19 @@ ify =  {
 
     at: function(tweet) {
         return tweet.replace(/\B[@＠]([a-zA-Z0-9_]{1,20})/g, function(m, username) {
-            return '<a target="_blank" class="twtr-atreply" href="http://twitter.com/intent/user?screen_name=' + username + '">@' + username + '</a>';
+            return '<a target="_blank" class="twtr-atreply" href="https://twitter.com/intent/user?screen_name=' + username + '">@' + username + '</a>';
         });
     },
 
     list: function(tweet) {
         return tweet.replace(/\B[@＠]([a-zA-Z0-9_]{1,20}\/\w+)/g, function(m, userlist) {
-            return '<a target="_blank" class="twtr-atreply" href="http://twitter.com/' + userlist + '">@' + userlist + '</a>';
+            return '<a target="_blank" class="twtr-atreply" href="https://twitter.com/' + userlist + '">@' + userlist + '</a>';
         });
     },
 
     hash: function(tweet) {
         return tweet.replace(/(^|\s+)#(\w+)/gi, function(m, before, hash) {
-            return before + '<a target="_blank" class="twtr-hashtag" href="http://twitter.com/search?q=%23' + hash + '">#' + hash + '</a>';
+            return before + '<a target="_blank" class="twtr-hashtag" href="https://twitter.com/search?q=%23' + hash + '">#' + hash + '</a>';
         });
     },
 
