--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="frame">
           <div class="blurb">
             <h1 style="margin: 0">Hi there, I'm Trent Hazy</h1>
-            <p style="color: white; margin: 10px 0;">I&#39;m an engineer/designer obsessed with productivity tools, my son, and cars.</p>
+            <p style="color: white; margin: 10px 0;">I&#39;m a serial entrepreneur obsessed with productivity tools, my kids, and cars.</p>
           </div>
       </div>
     </div>
