--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="trent, hazy, trenthazy, trent hazy">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@trenthazy">
-    <meta name="description" content="Trent Hazy is a product leader and entrepreneur based in Seattle. He currently works at Microsoft and previously founded MindSumo and earned a B.S. and MBA from Stanford.">
+    <meta name="description" content="Trent Hazy is a product leader and entrepreneur based in Seattle. He's currently working on a new company, previously founded MindSumo, and earned a B.S. and MBA from Stanford.">
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <script src="https://use.fontawesome.com/461d077d07.js"></script>
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
