--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       		<ul>
             <li><a href="mailto:trenthazy@gmail.com.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> email</a></li>
             <li><a href="https://www.linkedin.com/in/trenthazy"><i class="fa fa-linkedin-square" aria-hidden="true"></i> linkedin</a></li>
-            <li><a href="https://angel.co/trenthazy"><i class="fa fa-angellist" aria-hidden="true"></i> angellist</a></li>
+            <li><a href="https://www.twitter.com/trenthazy"><i class="fa fa-twitter" aria-hidden="true"></i> twitter</a></li>
   			</ul>
   		</footer>
     </div>
