--- a/about.html
+++ b/about.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <script src="https://use.fontawesome.com/461d077d07.js"></script>
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="https://i.imgur.com/yHMDL1d.png">
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' />
   </head>
@@ -43,101 +46,6 @@
     </div>
   </body>
 </html>
-
-<script>
-  window.setTimeout(function(){
-    $(".twitter-timeline").contents().find(".e-entry-title").css("font-family","courier");
-    $(".twitter-timeline").contents().find(".e-entry-title").css("color","grey");
-    $(".twitter-timeline").contents().find(".p-name").css("font-family","courier");
-    $(".twitter-timeline").contents().find(".p-name").css("color","grey");
-  }, 1000);
-</script>
-
-
-<!--Twitter -->
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
-<script type="text/javascript">
-
-ify =  {
-       link: function(tweet) {
-        return tweet.replace(/\b(((https*\:\/\/)|www\.)[^\"\']+?)(([!?,.\)]+)?(\s|$))/g, function(link, m1, m2, m3, m4) {
-            var http = m2.match(/w/) ? 'http://' : '';
-            return '<a class="twtr-hyperlink" target="_blank" href="' + http + m1 + '">' + ((m1.length > 25) ? m1.substr(0, 24) + '...' : m1) + '</a>' + m4;
-        });
-    },
-
-    at: function(tweet) {
-        return tweet.replace(/\B[@＠]([a-zA-Z0-9_]{1,20})/g, function(m, username) {
-            return '<a target="_blank" class="twtr-atreply" href="https://twitter.com/intent/user?screen_name=' + username + '">@' + username + '</a>';
-        });
-    },
-
-    list: function(tweet) {
-        return tweet.replace(/\B[@＠]([a-zA-Z0-9_]{1,20}\/\w+)/g, function(m, userlist) {
-            return '<a target="_blank" class="twtr-atreply" href="https://twitter.com/' + userlist + '">@' + userlist + '</a>';
-        });
-    },
-
-    hash: function(tweet) {
-        return tweet.replace(/(^|\s+)#(\w+)/gi, function(m, before, hash) {
-            return before + '<a target="_blank" class="twtr-hashtag" href="https://twitter.com/search?q=%23' + hash + '">#' + hash + '</a>';
-        });
-    },
-
-    clean: function(tweet) {
-        return this.hash(this.at(this.list(this.link(tweet))));
-    }
-  } // ify
-
-$.getJSON("https://api.twitter.com/1/statuses/user_timeline/trenthazy.json?count=1&include_rts=1&callback=?", function(data) {
-     $("#twitter").html(ify.clean(data[0].text));
-});
-</script>
-
-<script type="text/javascript">
-$.getJSON("https://api.twitter.com/1/statuses/user_timeline/trenthazy.json?count=1&include_rts=1&callback=?", function(data) {
-     $("#tweet_date").html(prettyDate(data[0].created_at));
-});
-</script>
-
-<script type="text/javascript">
-/*
- * JavaScript Pretty Date
- * Copyright (c) 2011 John Resig (ejohn.org)
- * Licensed under the MIT and GPL licenses.
- */
-
-// Takes an ISO time and returns a string representing how
-// long ago the date represents.
-function prettyDate(time){
-    var date = new Date((time || "").replace(/-/g,"/").replace(/[TZ]/g," ")),
-        diff = (((new Date()).getTime() - date.getTime()) / 1000),
-        day_diff = Math.floor(diff / 86400);
-            
-    if ( isNaN(day_diff) || day_diff < 0 || day_diff >= 31 )
-        return;
-            
-    return day_diff == 0 && (
-            diff < 60 && "just now" ||
-            diff < 120 && "1 minute ago" ||
-            diff < 3600 && Math.floor( diff / 60 ) + " minutes ago" ||
-            diff < 7200 && "1 hour ago" ||
-            diff < 86400 && Math.floor( diff / 3600 ) + " hours ago") ||
-        day_diff == 1 && "Yesterday" ||
-        day_diff < 7 && day_diff + " days ago" ||
-        day_diff < 31 && Math.ceil( day_diff / 7 ) + " weeks ago";
-}
-
-// If jQuery is included in the page, adds a jQuery plugin to handle it as well
-if ( typeof jQuery != "undefined" )
-    jQuery.fn.prettyDate = function(){
-        return this.each(function(){
-            var date = prettyDate(this.title);
-            if ( date )
-                jQuery(this).text( date );
-        });
-    };
-</script>
 
 <!--Google Analytics -->
 <script type="text/javascript">
