--- a/about.html
+++ b/about.html
@@ -35,14 +35,15 @@
             <p>My wife and I started a full-time MBA back at Stanford in 2017 before moving to Seattle, where I work on the Microsoft Teams product.</p>
           </div><!-- /.blurb -->
       </div><!-- /.container -->
-      <footer>
-          <ul>
-            <li><a href="mailto:trent@trenthazy.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> email</a></li>
-            <li><a href="https://www.linkedin.com/in/trenthazy"><i class="fa fa-linkedin-square" aria-hidden="true"></i> linkedin</a></li>
-            <li><a href="https://angel.co/trenthazy"><i class="fa fa-angellist" aria-hidden="true"></i> angellist</a></li>
-            <li><a href="https://github.com/trenthazy"><i class="fa fa-github" aria-hidden="true"></i> github</a></li>
-        </ul>
-      </footer>
+      <div class="frame">
+    		<footer>
+        		<ul>
+              <li><a href="mailto:trenthazy@gmail.com.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> email</a></li>
+              <li><a href="https://www.linkedin.com/in/trenthazy"><i class="fa fa-linkedin-square" aria-hidden="true"></i> linkedin</a></li>
+              <li><a href="https://www.twitter.com/trenthazy"><i class="fa fa-twitter" aria-hidden="true"></i> twitter</a></li>
+    			</ul>
+    		</footer>
+      </div>
     </div>
   </body>
 </html>
