--- a/about.html
+++ b/about.html
@@ -16,35 +16,32 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' />
   </head>
   <body>
-
-    
-      <nav>
-        <div class="frame">
-          <ul>
-              <li><a href="/"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
-              <li><a href="/about"><i class="fa fa-user-circle-o" aria-hidden="true"></i> About</a></li>
-              <li><a href="/blog"><i class="fa fa-bullhorn" aria-hidden="true"></i> Blog</a></li>
-          </ul>
-        </div>
-      </nav>
-      <div class="container">
-          <div class="blurb">
-            <h1>About</h1>
-            <p>Grew up in LA, then migrated to Northern California in 2005 to attend Stanford. Got a degree in Product Design and now can&#39;t stop thinking about products...</p>
-            <p>Founded <a href="https://www.mindsumo.com" target="_blank">MindSumo</a> in 2011 to help companies solve problems by crowdsourcing new ideas from students and recent grads. Grew it to 350,000+ users and 100 Fortune 500 clients.</p>
-            <p>My wife and I started a full-time MBA back at Stanford in 2017 before moving to Seattle, where I work on the Microsoft Teams product.</p>
-          </div><!-- /.blurb -->
-      </div><!-- /.container -->
+    <nav>
       <div class="frame">
-    		<footer>
-        		<ul>
-              <li><a href="mailto:trenthazy@gmail.com.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> email</a></li>
-              <li><a href="https://www.linkedin.com/in/trenthazy"><i class="fa fa-linkedin-square" aria-hidden="true"></i> linkedin</a></li>
-              <li><a href="https://www.twitter.com/trenthazy"><i class="fa fa-twitter" aria-hidden="true"></i> twitter</a></li>
-    			</ul>
-    		</footer>
+        <ul>
+            <li><a href="/"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+            <li><a href="/about"><i class="fa fa-user-circle-o" aria-hidden="true"></i> About</a></li>
+            <li><a href="/blog"><i class="fa fa-bullhorn" aria-hidden="true"></i> Blog</a></li>
+        </ul>
       </div>
-    </div>
+    </nav>
+    <div class="container">
+        <div class="blurb">
+          <h1>About</h1>
+          <p>Grew up in LA, then migrated to Northern California in 2005 to attend Stanford. Got a degree in Product Design and now can&#39;t stop thinking about products...</p>
+          <p>Founded <a href="https://www.mindsumo.com" target="_blank">MindSumo</a> in 2011 to help companies solve problems by crowdsourcing new ideas from students and recent grads. Grew it to 350,000+ users and 100 Fortune 500 clients.</p>
+          <p>My wife and I completed an MBA back at Stanford in 2017 before moving to Seattle. I led product teams building the automation layer in Microsoft Teams and Microsoft 365 overall. </p>
+        </div><!-- /.blurb -->
+    </div><!-- /.container -->
+    <footer>
+     <div class="frame">
+    		<ul>
+          <li><a href="mailto:trenthazy@gmail.com.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> email</a></li>
+          <li><a href="https://www.linkedin.com/in/trenthazy"><i class="fa fa-linkedin-square" aria-hidden="true"></i> linkedin</a></li>
+          <li><a href="https://www.twitter.com/trenthazy"><i class="fa fa-twitter" aria-hidden="true"></i> twitter</a></li>
+  			</ul>
+      </div>
+    </footer>
   </body>
 </html>
 
