--- a/blog.html
+++ b/blog.html
@@ -2,35 +2,43 @@
 <html>
   <head>
     <title>Trent Hazy | About</title>
+    <meta name="keywords" content="trent, hazy, trenthazy, trent hazy">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@trenthazy">
+    <meta name="description" content="Learn about Trent's background, experience, and interests.">
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <script src="https://use.fontawesome.com/461d077d07.js"></script>
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="https://i.imgur.com/yHMDL1d.png">
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' />
   </head>
   <body>
-    <div class="frame">
-      <nav>
-          <ul>
-              <li><a href="/"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
-              <li><a href="/about"><i class="fa fa-user-circle-o" aria-hidden="true"></i> About</a></li>
-              <li><a href="/blog"><i class="fa fa-bullhorn" aria-hidden="true"></i> Blog</a></li>
-          </ul>
-      </nav>
+    <nav>
+      <div class="frame">
+        <ul>
+            <li><a href="/"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+            <li><a href="/about"><i class="fa fa-user-circle-o" aria-hidden="true"></i> About</a></li>
+            <li><a href="/blog"><i class="fa fa-bullhorn" aria-hidden="true"></i> Blog</a></li>
+        </ul>
+      </div>
+    </nav>
       <div class="container">
           <div class="blurb">
             <p>Coming soon...</p>
           </div><!-- /.blurb -->
       </div><!-- /.container -->
-      <footer>
-          <ul>
-            <li><a href="mailto:trent@trenthazy.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> email</a></li>
-            <li><a href="http://www.linkedin.com/in/trenthazy"><i class="fa fa-linkedin-square" aria-hidden="true"></i> linkedin</a></li>
-            <li><a href="https://angel.co/trenthazy"><i class="fa fa-angellist" aria-hidden="true"></i> angellist</a></li>
-            <li><a href="https://github.com/trenthazy"><i class="fa fa-github" aria-hidden="true"></i> github</a></li>
-        </ul>
-      </footer>
-    </div>
+    <footer>
+     <div class="frame">
+    		<ul>
+          <li><a href="mailto:trenthazy@gmail.com.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> email</a></li>
+          <li><a href="https://www.linkedin.com/in/trenthazy"><i class="fa fa-linkedin-square" aria-hidden="true"></i> linkedin</a></li>
+          <li><a href="https://www.twitter.com/trenthazy"><i class="fa fa-twitter" aria-hidden="true"></i> twitter</a></li>
+  			</ul>
+      </div>
+    </footer>
   </body>
 </html>
 
