--- a/about.html
+++ b/about.html
@@ -26,12 +26,14 @@
       </div>
     </nav>
     <div class="container">
+      <div class="frame">
         <div class="blurb">
           <h1>About</h1>
           <p>Grew up in LA, then migrated to Northern California in 2005 to attend Stanford. Got a degree in Product Design and now can&#39;t stop thinking about products...</p>
           <p>Founded <a href="https://www.mindsumo.com" target="_blank">MindSumo</a> in 2011 to help companies solve problems by crowdsourcing new ideas from students and recent grads. Grew it to 350,000+ users and 100 Fortune 500 clients.</p>
           <p>My wife and I completed an MBA back at Stanford in 2017 before moving to Seattle. I led product teams building the automation layer in Microsoft Teams and Microsoft 365 overall. </p>
         </div><!-- /.blurb -->
+      </div>
     </div><!-- /.container -->
     <footer>
      <div class="frame">
