--- a/about.html
+++ b/about.html
@@ -30,8 +30,9 @@
         <div class="blurb">
           <h1>About</h1>
           <p>Grew up in LA, then migrated to Northern California in 2005 to attend Stanford. Got a degree in Product Design and now can&#39;t stop thinking about products...</p>
-          <p>Founded <a href="https://www.mindsumo.com" target="_blank">MindSumo</a> in 2011 to help companies solve problems by crowdsourcing new ideas from students and recent grads. Grew it to 350,000+ users and 100 Fortune 500 clients.</p>
+          <p>Founded <a href="https://www.mindsumo.com" target="_blank">MindSumo</a> in 2011 to help companies run competitions online (like hackathons). We handled the registration, submissions, and judging process. Grew it to 350,000+ users and 100 Fortune 500 clients before it was acquired in 2020.</p>
           <p>My wife and I completed an MBA back at Stanford in 2017 before moving to Seattle. I led product teams building the automation layer in Microsoft Teams and Microsoft 365 overall. </p>
+          <p>I'm in the early stages of starting a new company. Stay tuned... </p>
         </div><!-- /.blurb -->
       </div>
     </div><!-- /.container -->
