--- a/blog.html
+++ b/blog.html
@@ -26,9 +26,11 @@
       </div>
     </nav>
       <div class="container">
-          <div class="blurb">
+        <div class="frame">  
+        <div class="blurb">
             <p>Coming soon...</p>
           </div><!-- /.blurb -->
+        </div>
       </div><!-- /.container -->
     <footer>
      <div class="frame">
