--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </nav>
     <div class="hero">
       <div class="frame">
-          <div class="blurb">
+          <div class="hero_blurb">
             <h1 style="margin: 0">Hi there, I'm Trent Hazy</h1>
             <p style="color: white; margin: 10px 0;">I&#39;m a serial entrepreneur obsessed with productivity tools, my kids, and cars.</p>
           </div>
